
  [ Sjoerd Simons ]
  * [armhf] DRM: Enable CONFIG_DRM_IMX_PARALLEL_DISPLAY

  [ Ben Hutchings ]
  * linux-tools: Fix cross-build of objtool
  * [powerpcspe] Fix build failures (thanks to James Clarke):
    - powerpc/lib/sstep: Fix building for powerpcspe
    - powerpc/lib/Makefile: Don't pull in quad.o for 32-bit kernels
    - linux-perf: Disable building for powerpcspe

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 04 Jul 2018 10:25:57 +0200

linux (4.17.3-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.17.3
    - net: aquantia: fix unsigned numvecs comparison with less than zero
    - bonding: re-evaluate force_primary when the primary slave name changes
    - cdc_ncm: avoid padding beyond end of skb
    - ipv6: allow PMTU exceptions to local routes
    - [armhf,arm64] net: dsa: add error handling for pskb_trim_rcsum
    - net/sched: act_simple: fix parsing of TCA_DEF_DATA
    - tcp: verify the checksum of the first data segment in a new connection
    - socket: close race condition between sock_close() and sockfs_setattr()
      (CVE-2018-12232)
    - udp: fix rx queue len reported by diag and proc interface
    - net: in virtio_net_hdr only add VLAN_HLEN to csum_start if payload holds
      vlan
    - ACPICA: AML parser: attempt to continue loading table after error
    - ext4: fix hole length detection in ext4_ind_map_blocks()
    - ext4: update mtime in ext4_punch_hole even if no blocks are released
    - ext4: do not allow external inodes for inline data (CVE-2018-11412)
    - ext4: bubble errors from ext4_find_inline_data_nolock() up to ext4_iget()
    - ext4: correctly handle a zero-length xattr with a non-zero e_value_offs
      (CVE-2018-10840)
    - ext4: fix fencepost error in check for inode count overflow during resize
    - driver core: Don't ignore class_dir_create_and_add() failure.
    - Btrfs: allow empty subvol= again
    - Btrfs: fix clone vs chattr NODATASUM race