@@ -1,0 +1,11 @@
+PROGS = \
+	addnote \
+	hack-coff \
+	mktree
+
+SCRIPTS = \
+	wrapper
+
+include $(top_rulesdir)/Makefile.inc
+
+CPPFLAGS += -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
