@@ -85,6 +85,9 @@ ifneq ($(DO_TOOLS_VERSIONED),False)
       binary-arch-arch: install-perf
     endif
   endif
+  ifneq ($(filter powerpc powerpcspe ppc64,$(DEB_HOST_ARCH)),)
+    binary-arch-arch: install-bootwrapper
+  endif
 endif
 ifneq ($(DO_TOOLS_UNVERSIONED),False)
   binary-arch-arch: install-usbip install-cpupower install-liblockdep
@@ -455,10 +458,20 @@ ifneq ($(filter arm64 armel armhf,$(ARCH)),)
 	+$(MAKE_CLEAN) -C $(DIR) dtbs_install INSTALL_DTBS_PATH=$(CURDIR)/$(DT_INSTALL_DIR)
 endif
 ifneq ($(filter powerpc powerpcspe ppc64,$(ARCH)),)
+# Install wrapper code and DT source, but not the wrapper script or
+# the executables it calls.  Kbuild will always build these executable
+# as native code, which is wrong for a cross-built package.  Install
+# symlinks to the versions in the linux-bootwrapper package instead.
+	rm -rf '$(DIR)_bootwrapper'
 	+$(MAKE_CLEAN) -C '$(DIR)' bootwrapper_install \
-	  WRAPPER_OBJDIR='$(CURDIR)/$(DT_INSTALL_DIR)' \
-	  WRAPPER_DTSDIR='$(CURDIR)/$(DT_INSTALL_DIR)'/dts \
-	  WRAPPER_BINDIR='$(CURDIR)/$(DT_INSTALL_DIR)'
+		WRAPPER_OBJDIR='$(CURDIR)/$(DT_INSTALL_DIR)' \
+		WRAPPER_DTSDIR='$(CURDIR)/$(DT_INSTALL_DIR)/dts' \
+		WRAPPER_BINDIR='$(CURDIR)/$(DIR)_bootwrapper'
+	for prog in '$(DIR)_bootwrapper'/*; do \
+		prog="$$(basename $$prog)"; \
+		ln -s ../linux-bootwrapper-$(ABINAME)/$$prog \
+			'$(DT_INSTALL_DIR)'/$$prog; \
+	done
 endif
 
 install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_bug:
@@ -761,6 +774,24 @@ endif
 	dh_compress
 	dh_fixperms
 	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+install-bootwrapper: PACKAGE_NAME = linux-bootwrapper-$(ABINAME)
+install-bootwrapper: DH_OPTIONS = -p$(PACKAGE_NAME)
+install-bootwrapper: DIR = $(CURDIR)/debian/$(PACKAGE_NAME)
+install-bootwrapper: $(STAMPS_DIR)/build-tools
+	dh_testdir
+	dh_testroot
+	dh_prep
+	$(call make-tools,arch/powerpc/boot) install DESTDIR=$(DIR) installdir=/usr/lib/$(PACKAGE_NAME)
+	dh_installchangelogs
+	dh_strip
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
