@@ -1,6 +1,6 @@
 Package: linux-image-@abiname@@localversion@
 Build-Profiles: <!stage1>
-Depends: kmod, linux-base (>= 4.3~), ${misc:Depends}
+Depends: kmod, linux-base (>= 4.3~), linux-bootwrapper-@abiname@ [powerpc powerpcspe ppc64], ${misc:Depends}
 Recommends: firmware-linux-free, ${kernel:Recommends}
 Suggests: linux-doc-@version@, debian-kernel-handbook
 Description: Linux @upstreamversion@ for @class@
