@@ -22,3 +22,12 @@ Description: Performance analysis tools for Linux @version@
  .
  The linux-base package contains a 'perf' command which will invoke the
  appropriate version for the running kernel.
+
+Package: linux-bootwrapper-@abiname@
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: powerpc powerpcspe ppc64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: foreign
+Description: Boot wrapper tools for Linux @version@ on PowerPC
+ This package provides the 'wrapper' script and related tools needed
+ to process the Linux kernel image for use with some PowerPC platforms.
