@@ -241,6 +241,11 @@ linux (4.17.4-1) UNRELEASED; urgency=medium
     - powerpc/lib/sstep: Fix building for powerpcspe
     - powerpc/lib/Makefile: Don't pull in quad.o for 32-bit kernels
     - linux-perf: Disable building for powerpcspe
+  * [powerpc,powerpcspe,ppc64] Fix cross-build (Closes: #903096):
+    - Introduce linux-bootwrapper-<abiname> package containing boot wrapper
+      tools for the host architecture
+    - linux-image: Install symlinks to boot wrapper tools instead of the
+      native tools built by kbuild
 
  -- Sjoerd Simons <sjoerd@debian.org>  Wed, 04 Jul 2018 10:25:57 +0200
 
